minor updates to analytics generators
changed base64 use from java (not api) to java.util